Complete cat cycler

--- a/index.html
+++ b/index.html
@@ -20,17 +20,19 @@
       <header>
         <h1>BeCode / JavaScript for the Web</h1>
         <h2>
-          <strong><i class="fas fa-arrow-right"></i> Insert exercise name here <i class="fas fa-arrow-left"></i></strong>
+          <strong><i class="fas fa-arrow-right"></i> Cat cycler <i class="fas fa-arrow-left"></i></strong>
         </h2>
       </header>
       <div class="content">
-        <p>
-          <i class="fas fa-arrow-right"></i> Insert content here. <i class="fas fa-arrow-left"></i>
-        </p>
+        <!-- Content goes here -->
+        <div class="squareBox" id="squareBox">
+          <!-- <img src="" alt="#" id="squareImg">
+        element generated through script.js-->
+        </div>
+        <!-- <button type="button" id="cycleButton">Click me</button> -->
       </div>
     </div>
 
     <script src="./script.js"></script>
   </body>
 </html>
-
